Atualização dos exercicios

--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -7,12 +7,8 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-
+           background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+           background-size: cover;
         }
         main{
             background-color: white;
@@ -27,7 +23,12 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, rem! Exercitationem, facilis quaerat esse, dolorem molestias maxime magni architecto numquam modi aspernatur, cumque obcaecati ad vero harum illum id assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur eius, sed corrupti, numquam fugiat quia recusandae laboriosam cum soluta doloribus maiores corporis officiis perspiciatis, sint voluptates laborum! Officiis, sed amet? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius totam eaque ad. Sint qui, incidunt optio adipisci ut sed dolorum accusantium nulla aut sapiente, porro numquam harum nesciunt facilis consequatur.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, rem! Exercitationem, facilis quaerat esse, dolorem molestias maxime magni architecto numquam modi aspernatur, cumque obcaecati ad vero harum illum id assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur eius, sed corrupti, numquam fugiat quia recusandae laboriosam cum soluta doloribus maiores corporis officiis perspiciatis, sint voluptates laborum! Officiis, sed amet? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius totam eaque ad. Sint qui, incidunt optio adipisci ut sed dolorum accusantium nulla aut sapiente, porro numquam harum nesciunt facilis consequatur.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, rem! Exercitationem, facilis quaerat esse, dolorem molestias maxime magni architecto numquam modi aspernatur, cumque obcaecati ad vero harum illum id assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur eius, sed corrupti, numquam fugiat quia recusandae laboriosam cum soluta doloribus maiores corporis officiis perspiciatis, sint voluptates laborum! Officiis, sed amet? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius totam eaque ad. Sint qui, incidunt optio adipisci ut sed dolorum accusantium nulla aut sapiente, porro numquam harum nesciunt facilis consequatur.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, rem! Exercitationem, facilis quaerat esse, dolorem molestias maxime magni architecto numquam modi aspernatur, cumque obcaecati ad vero harum illum id assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur eius, sed corrupti, numquam fugiat quia recusandae laboriosam cum soluta doloribus maiores corporis officiis perspiciatis, sint voluptates laborum! Officiis, sed amet? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius totam eaque ad. Sint qui, incidunt optio adipisci ut sed dolorum accusantium nulla aut sapiente, porro numquam harum nesciunt facilis consequatur
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, rem! Exercitationem, facilis quaerat esse, dolorem molestias maxime magni architecto numquam modi aspernatur, cumque obcaecati ad vero harum illum id assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur eius, sed corrupti, numquam fugiat quia recusandae laboriosam cum soluta doloribus maiores corporis officiis perspiciatis, sint voluptates laborum! Officiis, sed amet? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius totam eaque ad. Sint qui, incidunt optio adipisci ut sed dolorum accusantium nulla aut sapiente, porro numquam harum nesciunt facilis consequatur
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, rem! Exercitationem, facilis quaerat esse, dolorem molestias maxime magni architecto numquam modi aspernatur, cumque obcaecati ad vero harum illum id assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur eius, sed corrupti, numquam fugiat quia recusandae laboriosam cum soluta doloribus maiores corporis officiis perspiciatis, sint voluptates laborum! Officiis, sed amet? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius totam eaque ad. Sint qui, incidunt optio adipisci ut sed dolorum accusantium nulla aut sapiente, porro numquam harum nesciunt facilis consequatur
+        </p>
     </main>
 </body>
 </html>
